cutover ToParentBlockJoinQuery hit retrieval to modern approach (ParentChildrenBlockJoinQuery); things compile finally; many tests failing